tests/paczka1/small_fuzzy/59490669.err
Error in line 10: VwFAXf S7f f0,4
Error in line 11: q95PivFnBun S190 71,9
